--- a/src/decoration.css
+++ b/src/decoration.css
@@ -3,13 +3,15 @@
 /* decoration layer is styled in critical.css */
 
 /* extra transparency for below-the-fold paragraphs */
-.text-content-color.semitransparent {
-  background:
-    linear-gradient(
-      90deg,
-      rgba(187, 191, 194, 1),
-      rgba(187, 191, 194, 0.25)
-    );
+@media only screen and (min-width: 950px) {
+  .text-content-color.semitransparent {
+    background:
+      linear-gradient(
+        90deg,
+        rgba(187, 191, 194, 1),
+        rgba(187, 191, 194, 0.25)
+      );
+  }
 }
 
 /* decoration content */
